Fix some generator and layout issues

--- a/assets/corahn_rin/generator/css/_step_11_advantages.scss
+++ b/assets/corahn_rin/generator/css/_step_11_advantages.scss
@@ -29,7 +29,7 @@
             background-color: #e1f5fe;
         }
         &[class*="btn-state"]:before {
-            font-family: FontAwesome;
+            font-family: 'Font Awesome 5 Free';
             display: inline-block;
             color: #00b400;
             letter-spacing: 5px;
